<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:background="@drawable/bg_border_background"
    tools:context=".activity.GreetingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= "@string/hello"
            android:textSize="30sp"
            android:fontFamily="@font/ubuntu_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namamu"
            android:textSize="30sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:fontFamily="@font/ubuntu_medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="30sp"
            android:text="@string/mark"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/ini_adalah_intent_dengan_data"/>



</LinearLayout>