<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:background="@drawable/bg_border_background"
    tools:context=".activity.LinearLayoutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:fontFamily="@font/ubuntu_medium"
        android:textStyle="bold"
        android:text="@string/data_diri"/>


    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_medium"
        android:hint="@string/masukkan_nama"
        android:autofillHints="false"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_gravity="end"
        android:background="@drawable/custom_button_third"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/submit"/>

</LinearLayout>